# examine

./: .gitignore  Cargo.toml  README.md  build.rs  io.github.cosmic_utils.Examine.json  justfile  page.codeberg.sungsphinx.Examine.json
i18n/en/: examine.ftl
i18n/en-GB/: examine.ftl
i18n/sv/: examine.ftl
res/: io.github.cosmic_utils.Examine.desktop  io.github.cosmic_utils.Examine.metainfo.xml  page.codeberg.sungsphinx.Examine.desktop  page.codeberg.sungsphinx.Examine.metainfo.xml
src/: app.rs  config.rs  i18n.rs  main.rs
