[package]
name = "examine"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[dependencies]
etc-os-release = { version = "0.1.0", features = ["url", "date"] }
futures-util = "0.3.30"
i18n-embed-fl = "0.8"
itertools = "0.13.0"
open = "5.1.3"
rust-embed = "8.3.0"
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.2"

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["dbus-config", "tokio", "winit", "wgpu"]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
