[package]
name = "examine"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[dependencies]
etc-os-release = { version = "0.1.0", features = ["url", "date"] }
futures-util = "0.3.30"
i18n-embed-fl = "0.8"
itertools = "0.13.0"
env_logger = "0.11"
log = "0.4"
open = "5.1.3"
rust-embed = "8.3.0"
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.2"

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["tokio", "winit"]

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[features]
default = ["dbus-config", "wgpu"]
wgpu = ["libcosmic/wgpu"]
dbus-config = ["libcosmic/dbus-config"]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
